feat: fix sse emitter repo to nested map